add navigation, optimized code

--- a/index.html
+++ b/index.html
@@ -14,28 +14,33 @@
         <div class="container header__container">
             <img class="header__logo" src="img/logo.png" alt="logo">
 
-            <div class="header__right">
-                <nav class="header__nav">
-                    <ul class="header__list">
-                        <li class="header__item header__item--active">
-                            <span>Banana</span>
-                        </li>
-                        <li class="header__item">Coconut</li>
-                        <li class="header__item">Strawberry</li>
-                        <li class="header__item">Blackberry</li>
-                        <li class="header__item">Kiwi</li>
-                    </ul>
-                </nav>
-                <button class="header__btn" id="taste">Taste Drive</button>
-            </div>
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item banana">
+                        <span>Banana</span>
+                    </li>
+                    <li class="header__item coconut">
+                        <span>Coconut</span>
+                    </li>
+                    <li class="header__item strawberry">
+                        <span>Strawberry</span>
+                    </li>
+                    <li class="header__item blackberry">
+                        <span>Blackberry</span>
+                    </li>
+                    <li class="header__item kiwi">
+                        <span>Kiwi</span>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <main class="main">
         <div class="container main__container">
             <div class="main__left">
-                <h1 class="main__title">Banana</h1>
-                <p class="main__text">Bananas are a popular tropical fruit known for their distinctive yellow color and sweet taste. They are botanically classified as berries and grow in clusters on large herbaceous plants. Bananas are rich in essential nutrients such as potassium, vitamin C, and dietary fiber, making them a convenient and healthy snack option for athletes and individuals of all ages.</p>
+                <h1 class="main__title"></h1>
+                <p class="main__text"></p>
             </div>
 
             <img class="main__img" src="img/banana.png" alt="fruits">
