--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruits</title>
+    <title>fruitylips</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
     <header class="header">
@@ -42,7 +43,6 @@
                 <h1 class="main__title"></h1>
                 <p class="main__text"></p>
             </div>
-
             <img class="main__img" src="img/banana.png" alt="fruits">
         </div>
 
@@ -52,7 +52,6 @@
                     <path d="M26 14.5H2M2 14.5L15.4634 1M2 14.5L15.4634 28" stroke="#363839" stroke-width="2" stroke-linecap="round"/>
                 </svg>
             </button>
-
             <button class="nav-buttons__btn" id="next">
                 <svg width="27" height="29" viewBox="0 0 27 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 14.5H25M25 14.5L11.5366 1M25 14.5L11.5366 28" stroke="#363839" stroke-width="2" stroke-linecap="round"/>
